Implement 'fast flips' support for some S.A.M. games: Recommended table implementation is to use direct/fast flipper flips when solenoid 33 is on, but to respond to the standard flipper solenoids when 33 is off
 (trn_174h, acd_168h, mtl_170h, twd_160h, wof_500, st_161h, xmn_151h, fg_1200, potc_600, im_183ve, avr_200, avs_170, wpt_140a, tf_180h, bdk_294, shr_141, bbh_170, smanve_101, nba_802)
Fix some (unfortunately not all) AT91 JIT crashes (i.e. S.A.M. and Whitestar II)

*** ROM SUPPORT *** Thanks to Destruk, ipdb.org, inkochnito, Chad Hendrickson, John Mohr, Soren, Robotworkshop, mIKL, STR Pinball
New:
Inder: Topaz
Mirco: Lucky Draw
Williams: Bigfoot R0.1 & R0.1b & R0.1c & R0.1d (FreeWPC based rewrite of White Water)

Kinda new:
Baywatch 4.01 (unofficial MOD)
Hook 5.01 (unofficial MOD)

Correct Dumps:
Bally: Game Show LU-4 (Europe) (simple rename of gs_l4 to gs_lu4), LA-3 (simple rename of gs_l3 to gs_la3)
Capcom: Kingpin 1.05 Beta (simple rename of kpv106 to kpb105)
Williams: Mousin' Around! LA-4 (now uses the 'real' L2 sound roms. As this matches the LX-1 set then, LX-1 was removed from PinMAME)

Clones:
AC/DC 1.70.0,1.70.0LE
Baby Pac-Man (Vidiot U9 ROM Update 891-16 per Service-Bulletin dated July 11 1983)
Batman 1.03 (French)
Black Jack (Saucer points modification)
Bow & Arrow (Prototype rev. 22)
Earthshaker PA-4
Embryon v92 (7-digit conversion and more)
Frontier (Gate Fix)
Galaxy (Planet Skillshot)
Game Show LU-3 (Europe),LG-6 (German)
High Speed L-4C (competition MOD)
Jokerz! LG-4 (German)
Meteor (No Background Sound)
Pool Sharks LA-7C (competition MOD)
Spider-Man 2.62 (bootleg with replaced music)
Star Trek (Stern) 1.62,1.62LE



Version 3.0 (December 24th, 2017) - "11 years in the making"
------------------------------------------------------------------------------
*** GENERAL ***
Extend and update some parts of the .txt documentation files

*** CORE/CPU ***